Fix:Adding overflow

--- a/static/result.css
+++ b/static/result.css
@@ -1,10 +1,17 @@
 .center{
+    position:relative;
     top:50%;
     left: 50%;
     transform: translate(-50%,0%);
     font-weight: bolder;
     font-size: small;
     color: rgb(83, 50, 9);
+    text-align: center;
+    overflow-y: auto;
+    overflow-x: auto;
+    width:40%;
+    height: 40%;
+    font-weight: bolder;
 }
 p{
     text-align: center;
@@ -12,4 +19,11 @@ p{
     font-weight: bold;
     font-size: large;
     background-color: whitesmoke;
+}
+body {
+    background-image: url(../static/Screenshot\ 2024-08-26\ at\ 16-37-28\ Premium\ Photo\ White\ alphabet\ frame\ background.png);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-attachment: fixed;
 }
